<resources>
    <string name="app_name">Tasky</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="add_task">Add Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="priority_task">Priority Task</string>
    <string name="note">Note</string>
    <string name="mark_as_finished">Mark as finished</string>
    <string name="delete_task">Delete Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="unfinished">Unfinished</string>
    <string name="to_do_list">To do List</string>
    <string name="subtitle">Subtitle</string>
    <string name="edit_subtask">Edit Subtask</string>
    <string name="update_task">Update Task</string>
    <string name="welcome_to_tasky">Welcome to Tasky!</string>
    <string name="have_a_nice_day">Have a nice day!</string>
    <string name="my_priority_task">My Priority Task</string>
    <string name="my_daily_task">My Daily Task</string>
    <string name="create_task">Create Task</string>
    <string name="updating_soon">Updating soon...</string>
</resources>