<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.DetailDailyTaskFragment"
    android:paddingTop="16dp"
    android:paddingHorizontal="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/close_square"/>

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_weight="2"/>
    </LinearLayout>

    <TextView
        android:id="@+id/date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Date"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bar" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="23 March 2023"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_tv"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/start_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_tv"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/end_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/start_tv"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00:00"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/end_tv"
        app:layout_constraintTop_toBottomOf="@+id/end_tv"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/note_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/start"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Something"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_tv"
        android:layout_marginTop="4dp"/>

    <TextView
        android:id="@+id/finished_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note"
        android:layout_marginTop="48dp"
        android:background="@drawable/redblue_shape"
        android:text="@string/mark_as_finished"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/edit_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/finished_btn"
        app:layout_constraintTop_toBottomOf="@id/finished_btn"
        app:layout_constraintEnd_toEndOf="@+id/finished_btn"
        android:layout_marginTop="16dp"
        android:background="@drawable/redblue_shape"
        android:text="@string/edit_task"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/delete_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/finished_btn"
        app:layout_constraintTop_toBottomOf="@id/edit_btn"
        app:layout_constraintEnd_toEndOf="@+id/finished_btn"
        android:layout_marginTop="16dp"
        android:background="@drawable/delete_shape"
        android:text="@string/delete_task"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        />






</androidx.constraintlayout.widget.ConstraintLayout>