<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screen.UpdateSubTaskFragment"
    android:paddingTop="16dp"
    android:paddingHorizontal="20dp">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/title_tv">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@drawable/back_shape"
            android:src="@drawable/baseline_arrow_back_24"
            android:padding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Edit Task"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginHorizontal="102dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar"
        android:text="@string/title"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="35dp"
        />

    <EditText
        android:id="@+id/title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edt_txt_shape"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:textColorHint="@color/white"
        android:padding="10dp"/>


    <TextView
        android:id="@+id/delete_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_txt"
        android:layout_marginTop="40dp"
        android:background="@drawable/delete_shape"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/delete_task"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/edit_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/delete_btn"
        app:layout_constraintTop_toBottomOf="@id/delete_btn"
        app:layout_constraintEnd_toEndOf="@+id/delete_btn"
        android:layout_marginTop="16dp"
        android:background="@drawable/delete_shape"
        android:text="@string/edit_task"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center"
        />


</androidx.constraintlayout.widget.ConstraintLayout>