<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screen.UpdatePriorityTaskFragment"
    android:paddingTop="16dp"
    android:paddingHorizontal="20dp">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="@drawable/back_shape"
            android:src="@drawable/baseline_arrow_back_24"
            android:padding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update_task"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginHorizontal="102dp"/>
    </LinearLayout>


    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/bar"
        android:layout_marginTop="45dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/title"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/title_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/edt_txt_shape"
                android:padding="12dp"
                android:textColorHint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_tv" />

            <TextView
                android:id="@+id/description_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/description"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_txt" />

            <EditText
                android:id="@+id/description_txt"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edt_txt_shape"
                android:padding="12dp"
                android:textColorHint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_tv" />

            <TextView
                android:id="@+id/category_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="Category"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_txt" />

            <TextView
                android:id="@+id/daily_task"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edt_txt_shape"
                android:gravity="center"
                android:text="Daily Task"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/priority_task"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category_tv" />


            <TextView
                android:id="@+id/priority_task"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edt_txt_shape"
                android:gravity="center"
                android:text="@string/priority_task"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/daily_task"
                app:layout_constraintTop_toBottomOf="@+id/category_tv" />

            <TextView
                android:id="@+id/timeStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/start"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/daily_task" />

            <TextView
                android:id="@+id/start"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/edt_txt_shape"
                android:gravity="center"
                android:text="00:00"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10dp"
                app:layout_constraintEnd_toStartOf="@id/end"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timeStart" />

            <TextView
                android:id="@+id/timeEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/end"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/end"
                app:layout_constraintTop_toBottomOf="@+id/priority_task" />

            <TextView
                android:id="@+id/end"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:padding="10dp"
                android:background="@drawable/edt_txt_shape"
                android:gravity="center"
                android:text="00:00"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/priority_task"
                app:layout_constraintStart_toEndOf="@+id/start"
                app:layout_constraintTop_toBottomOf="@id/timeEnd" />

            <TextView
                android:id="@+id/todo_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/to_do_list"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/start" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/subtitletxt"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todo_list"
                tools:listitem="@layout/subtask" />

            <EditText
                android:id="@+id/subtitletxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tooltipText="@string/title"
                app:layout_constraintBottom_toTopOf="@+id/add_subtask"
                app:layout_constraintStart_toStartOf="@id/todo_list"
                app:layout_constraintTop_toBottomOf="@id/recycler_view" />

            <TextView
                android:id="@+id/add_subtask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/plus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/subtitletxt" />

            <TextView
                android:id="@+id/btn_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/redblue_shape"
                android:gravity="center"
                android:text="@string/edit_task"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/add_subtask"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>